# expected

./: CHANGELOG.md  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml  test.yml
expected/: all.html  fn.expected.html  index.html  macro.expect.html  macro.expect_eq.html  sidebar-items.js  struct.Disappoint.html  struct.Disappoints.html  struct.Expected.html  trait.FutureExpectedExt.html
expected/disappoint/: struct.Disappoint.html  struct.Disappoints.html
expected/futures/: struct.Expected.html  trait.FutureExpectedExt.html
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/future/future/: trait.Future.js
implementors/core/iter/traits/collect/: trait.IntoIterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/expected/: trait.FutureExpectedExt.js
implementors/pin_project/__private/: trait.PinnedDrop.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: context.rs  disappoint.rs  futures.rs  lib.rs  macros.rs
src/expected/: context.rs.html  disappoint.rs.html  futures.rs.html  lib.rs.html  macros.rs.html
tests/: sketch.rs
