[package]
name = "expected"
version = "0.0.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
cfg-if = "0.1"
futures-core = { version = "0.3", optional = true }
pin-project = { version = "0.4", optional = true }

[dev-dependencies]
futures-executor = "0.3"
maybe-unwind = "0.1"

[features]
default = [ "futures" ]
futures = [ "futures-core", "pin-project" ]
